Resolves: tdf#154623 KEY_DECIMAL == GDK_KEY_KP_Decimal or GDK_KEY_KP_Separator

Change-Id: Iade6d3f93ff7f9dcc35c5a04e21617df06955527
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150623
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
Tested-by: Jenkins